fix: enhance scrollbar visibility by adding color

--- a/app/src/assets/globals.less
+++ b/app/src/assets/globals.less
@@ -12,6 +12,7 @@
         --background-sidebar: 0, 0%, 97%, 1;
         --background-dynamic-circle: 0 0% 0%;
         --foreground: 240 10% 3.9%;
+        --bg-border: 0 0% 0%;
 
         --card: 0 0% 100%;
         --card-hover: 0 0% 97%;
@@ -80,6 +81,7 @@
         --background-sidebar: 0, 0%, 7.8%, 1;
         --background-dynamic-circle: 0 0% 100%;
         --foreground: 210 40% 98%;
+        --bg-border: 0 0% 100%;
 
         --card: 240 10% 3.9%;
         --card-hover: 240 11% 12.5%;
