--- a/app/src/assets/pages/home.less
+++ b/app/src/assets/pages/home.less
@@ -683,6 +683,10 @@
         width: 100%;
         overflow: hidden;
 
+        .bg-border {
+            background-color: hsl(var(--bg-border));
+        }
+
         .scroll-down-btn {
             left: 45%;
             position: sticky;
